--- a/index.html
+++ b/index.html
@@ -22,43 +22,44 @@
         </thead>
         <tbody>
             <tr>
-                <td>&lt;table&gt;</td>
+                <!--Span is used to style the background color the text differently than the rest of the table cell-->
+                <td><span class="code">&lt;table&gt;</span></td>
                 <td>table</td>
                 <td>defines the entirety of the table</td>
             </tr>
             <tr>
-                <td>&lt;caption&gt;</td>
+                <td><span class="code">&lt;caption&gt;</span></td>
                 <td>caption</td>
                 <td>defines the title of the table</td>
 
             </tr>
             <tr>
-                <td>&lt;thead&gt;</td>
+                <td><span class="code">&lt;thead&gt;</span></td>
                 <td>table head</td>
                 <td>defines the set of rows containing the column headings of the table</td>
             </tr>
             <tr>
-                <td>&lt;tbody&gt;</td>
+                <td><span class="code">&lt;tbody&gt;</span></td>
                 <td>table body</td>
                 <td>defines the set of rows containing the main content of the table</td>
             </tr>
             <tr>
-                <td>&lt;tfoot&gt;</td>
+                <td><span class="code">&lt;tfoot&gt;</span></td>
                 <td>table foot</td>
                 <td>defines the set of rows containg the footer of the table (usually the sums of the columns)</td>
             </tr>
             <tr>
-                <td>&lt;tr&gt;</td>
+                <td><span class="code">&lt;tr&gt;</span></td>
                 <td>table row</td>
                 <td>defines a single row of table data</td>
             </tr>
             <tr>
-                <td>&lt;th&gt;</td>
+                <td><span class="code">&lt;th&gt;</span></td>
                 <td>table heading</td>
                 <td>defines a cell which contains the heading for a row or column</td>
             </tr>
             <tr>
-                <td>&lt;td&gt;</td>
+                <td><span class="code">&lt;td&gt;</span></td>
                 <td>table data</td>
                 <td>defines each cell containing the table's data that is not a heading</td>
             </tr>
@@ -75,17 +76,17 @@
         </thead>
         <tbody>
             <tr>
-                <td>scope</td>
+                <td><span class="code">scope</span></td>
                 <td>"row", "col", "colgroup",</td>
                 <td>used in table header cells to describe if the header is for a row or a column or a group of columns</td>
             </tr>
             <tr>
-                <td>colspan</td>
+                <td><span class="code">colspan</span></td>
                 <td>integers ("1,2,3...")</td>
                 <td>used to make a table cell span multiple columns</td>
             </tr>
             <tr>
-                <td>rowspan</td>
+                <td><span class="code">rowspan</span></td>
                 <td>integers ("1,2,3...")</td>
                 <td>used to make a table cell span multiple rows</td>
             </tr>
